# code-scent-mcp

./: .gitignore  .mcp.json  AGENTS.md  CBM_MINING_REPORT.html  CBM_MINING_REPORT.md  CHANGELOG.md  CODESCENT_DOGFOOD_REPORT.md  CODESCENT_MCP_UX_AUDIT.html  CODESCENT_MCP_UX_AUDIT.md  CODESCENT_ROADMAP.html  FFF_MINING_REPORT.html  FFF_MINING_REPORT.md  LICENSE  README.md  codescent-mcp-test-results.md  findings.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
.claude/: settings.json
.github/workflows/: ci.yml
.ntm/: rate_limits.json
.ntm/human_inbox/: 2026-06-15_15-51-12_agent_crashed.md  2026-06-15_15-51-12_agent_crashed_1.md  2026-06-15_15-51-12_agent_crashed_2.md  2026-06-15_15-52-42_agent_crashed.md  2026-06-15_18-22-12_agent_crashed.md  2026-06-15_18-22-12_agent_crashed_1.md  2026-06-15_18-22-22_agent_crashed.md  2026-06-15_18-36-32_agent_crashed.md  2026-06-15_18-40-22_agent_crashed.md
.ntm/pids/: cm-code-scent-mcp.pid
.ntm/summaries/: code-scent-mcp-20260615-170946.json  code-scent-mcp-20260615-170950.json
.omo/: boulder.json
.omo/drafts/: codescent-documentation-changelog-planning-notepad.md  codescent-mcp-plan-interview.md  prd-remaining-features-planning-notepad.md
.omo/evidence/: docs-changelog-final-manual-qa.txt  docs-changelog-final-plan-compliance.txt  docs-changelog-final-scope.txt  docs-changelog-task-1-baseline.txt  docs-changelog-task-1-cleanup.txt  docs-changelog-task-1-dirty-worktree.txt  docs-changelog-task-1-red.txt  docs-changelog-task-1-tmux.txt  docs-changelog-task-10-quality.txt  docs-changelog-task-10-status.txt  docs-changelog-task-2-cleanup.txt  docs-changelog-task-2-green.txt  docs-changelog-task-2-readme.txt  docs-changelog-task-3-cleanup.txt  docs-changelog-task-3-getting-started.txt  docs-changelog-task-3-green.txt  docs-changelog-task-4-changelog.txt  (+495 more)
docs/: agent-routing.md  architecture.md  cli-reference.md  configuration.md  dashboard.md  evals.md  getting-started.md  graph-backend.md  ideas.md  implementation-plan-feedback-autofix-ratchet.md  implementation-plan.md  language-packs.md  mcp-tools.md  prd.md  workflows.md
evals/: agent_task.md  agent_ux_baselines.json  precision_baselines.json  precision_harness.py  run_agent_ux.py  run_deterministic.py  run_precision.py  run_token_efficiency.py  token_baselines.json  tool_selection_tasks.json
plans/: 001-context-related-files.md  001-green-the-test-suite.md  002-change-test-heuristic.md  002-green-basedpyright.md  003-add-ci-gate.md  003-batched-content-search.md  004-index-backed-context.md  004-per-file-failure-isolation.md  005-bounded-source-reads.md  005-harden-git-subprocess.md  006-git-cochange-coupling.md  006-sqlite-read-path-quick-wins.md  007-dependency-hygiene.md  007-hotspot-prioritization.md  008-architecture-boundaries.md  008-registry-generated-reference-docs.md  009-dead-code-reachability.md  010-structural-duplicate-slop.md  011-coverage-ingestion.md  012-test-impact-selection.md  013-health-ratchet.md  014-verification-ledger.md  015-start-task-brief.md  README.md
scripts/: audit_plan_compliance.py  check_north_star.py  dashboard_screenshot.mjs  dogfood_allowlist.json  dogfood_scan.py  inspect_inventory.py  inspect_symbols.py  prove_auto_bootstrap.py  prove_capability_guide.py  prove_inline_suppression.py  prove_source_read_only.py  run_agent_eval.md  smoke_dashboard.py  smoke_lx_data_lake.py  smoke_mcp.py  smoke_mcp_support.py
templates/: AGENTS.md  CLAUDE.md  CODEX.md
tests/: AGENTS.md  precision_payloads.py  sarif_support.py  test_package_metadata.py
(+431 files in other folders)
