[project]
name = "codescent"
version = "0.1.0"
description = "Local, MCP-first codebase improvement server for AI coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "defusedxml>=0.7",
    "fastmcp>=2.12",
    "fff-search>=0.9.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rapidfuzz>=3.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# Optional SIMD accelerator for one-pass multi-pattern grep (U10 / bead P2.3).
# The base install runs the native tier without it; never a base dependency.
fast = ["pyahocorasick>=2.0"]

[project.scripts]
codescent = "codescent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "jsonschema>=4.0",
    "pyahocorasick>=2.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codescent"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
    "tests/fixtures/python-basic",
    "tests/fixtures/python-import-cycle",
    "tests/fixtures/python-entrypoint",
    "tests/fixtures/test-quality-flawed",
    "tests/fixtures/test-quality-healthy",
    "evals/precision_corpus",
]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
extend-exclude = [
    "tests/fixtures/python-basic",
    "tests/fixtures/python-import-cycle",
    "tests/fixtures/python-entrypoint",
    "tests/fixtures/test-quality-flawed",
    "tests/fixtures/test-quality-healthy",
    "evals/precision_corpus",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D100",
    "D101",
    "D102",
    "D104",
    "D103",
    "D105",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# The SARIF e2e proof emits verbose per-assertion logging (expected vs found).
"tests/integration/test_ci_sarif_e2e.py" = ["T201"]
"src/codescent/services/git.py" = ["S603"]
"scripts/smoke_lx_data_lake.py" = ["S603", "S607"]
"scripts/smoke_dashboard.py" = ["S603", "S607"]
"tests/**/*.py" = [
    "ARG",
    "D",
    "PLR2004",
    "S603",
    "S607",
    "S101",
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-ra", "--strict-config", "--strict-markers"]
norecursedirs = ["tests/fixtures/python-basic"]
filterwarnings = ["error"]
markers = [
    "live_model: opt-in R1 tool-selection eval that calls a live model (needs credentials)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
